OpenLGTV BCM: YouTube in TV (Leanback v3) added
git-svn-id: http://svn.openlgtv.org.ru@1092 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -82,6 +82,7 @@ TODO:
     * ADD: improvements to vod services
     * ADD: 'Options' field in WebUI -> Network Shares to tune performance/compatibility
     * ADD: OPENRELEASE crash detection - it will get disabled on next boot (after upgrade or enabling it) if unclean shutdown will be detected
+    * ADD: 'YouTube in TV' (Leanback v3) interface - with playlists support and HD playback
     * UPDATE: OPENRELEASE upgrade to version 2.1.2-16-g5414057
     * UPDATE: ntfs-3g upgrade to version 2012.1.15
     * UPDATE: tmux upgrade from 1.5 to 1.6
