--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
@@ -112,7 +112,7 @@ document.defaultAction = true;
 	<td align="center"><a id="c4" onKeyPress="javascript:setCurrent(this);return false" href='../vod/rss.cgi' target='_parent'><font size="+2">NetPlayer alternative</font></a></td>
 	<!-- td align="center"><a id="c4" onKeyPress="javascript:setCurrent(this);return false" href='../browser.cgi' target='_parent'><font size="+2" color='#FFFFFF'>Internet Browser</font></a></td -->
 	<td align="center"><a id="c5" onKeyPress="javascript:setCurrent(this);return false" href='../vod/rss.cgi?type=text/xml&col=5&url=http://playon.unixstorm.org/PLIMS/iptak.rss' target='_parent'><font size="+2">iPtak</font></a></td>
-	<td align="center"><a id="c6" onKeyPress="javascript:setCurrent(this);return false" href='http://tvlg.globo.com/' target='_parent'><img src="Images/tmp/globocom.gif" border=3></a></td>
+	<td align="center"><a id="c6" onKeyPress="javascript:setCurrent(this);return false" href='http://youtube.com/leanbacklite' target='_parent'><img src="Images/tmp/youtube.png" border=3></a></td>
 </tr>
 <tr>
 	<td align="center"><a id="c7" onKeyPress="javascript:setCurrent(this);return false" href='http://netcast.app.uol.com.br/' target='_parent'><img src="Images/tmp/uol.jpg" border=3></a></td>
@@ -383,6 +383,7 @@ document.defaultAction = true;
 	<td align="center"><a id="c206" onKeyPress="javascript:setCurrent(this);return false" href='http://connectedtv-1870b.orange.fr' target='_parent'><img src="Images/tmp/orange.png" border=3></a></td>
 	<td align="center"><a id="c207" onKeyPress="javascript:setCurrent(this);return false" href='http://www.majorcineplex.com/lgsmarttv/templates/' target='_parent'><img src="Images/tmp/majorcineplex.png" border=3></a></td>
 	<td align="center"><a id="c208" onKeyPress="javascript:setCurrent(this);return false" href='http://api.video.sina.com.cn/lg/' target='_parent'><img src="Images/tmp/Sina.gif" border=3></a></td>
+	<td align="center"><a id="c209" onKeyPress="javascript:setCurrent(this);return false" href='http://tvlg.globo.com/' target='_parent'><img src="Images/tmp/globocom.gif" border=3></a></td>
 </tr>
 </table>
 </center>
