OpenLGTV BCM: changelog/todo update
git-svn-id: http://svn.openlgtv.org.ru@1093 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -7,6 +7,8 @@ TODO:
     * FileManager: add subtitles loading and audio tracks change possibility in played videos (?)
     * FileManager: add check mark to select multiple files/dirs and handle that in copy/move/delete/play (?)
     * FileManager: add command line or command window (?)
+    * FileManager: fix copy status check - looks I've broken it recently
+    * write script for time adjusting always until it succeeds (there are services which need proper date and time)
     * make free space check for backup in installer
     * insert characters in cursor position in WebUI, Internet Browser and FileManager dialogs, not always at the end of string
     * update BusyBox to 1.19.4 (or newer) and backport few fixes from master, like "httpd: make byte ranges which start at 0 work too. Closes 4766" and "httpd: fix sendfile of files larger than 2 Gb. Closes 4754"
