--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -8,7 +8,6 @@ TODO:
     * FileManager: add check mark to select multiple files/dirs and handle that in copy/move/delete/play (?)
     * FileManager: add command line or command window (?)
     * FileManager: fix copy status check - looks I've broken it recently
-    * write script for time adjusting always until it succeeds (there are services which need proper date and time)
     * make free space check for backup in installer
     * insert characters in cursor position in WebUI, Internet Browser and FileManager dialogs, not always at the end of string
     * update BusyBox to 1.19.4 (or newer) and backport few fixes from master, like "httpd: make byte ranges which start at 0 work too. Closes 4766" and "httpd: fix sendfile of files larger than 2 Gb. Closes 4754"
@@ -106,6 +105,7 @@ TODO:
     * CHANGE: change Pause button action to Stop button in Internet Browser for NetCast links
     * CHANGE: modules.custom file name has changed to modules.list now
     * CHANGE: NetPlayer alternative is now renamed to RSS parser with support for more RSS-like formats
+    * CHANGE: use ntpclient instead of ntpd again with timeset.sh script to attempt to adjust time forever, until fist successful set
     * REMOVE: mtdinfo.sh for space reason - it's code is in info.sh already
     * REMOVE: chrt and chat binaries from SmartTV image for space reason - use BusyBox applets instead
     * REMOVE: libmagic.so as it wasn't used now since 'file' was removed
