--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -84,6 +84,7 @@ TODO:
     * ADD: 'Options' field in WebUI -> Network Shares to tune performance/compatibility
     * ADD: OPENRELEASE crash detection - it will get disabled on next boot (after upgrade or enabling it) if unclean shutdown will be detected
     * ADD: 'YouTube in TV' (Leanback v3) interface - with playlists support and HD playback
+    * ADD: web tools: jpeg.sh (support for unsuported by web browser non-JFIF JPEGs) and msdl.sh (support for additional streamed media protocols) - both need extroot
     * UPDATE: OPENRELEASE upgrade to version 2.1.2-16-g5414057
     * UPDATE: ntfs-3g upgrade to version 2012.1.15
     * UPDATE: tmux upgrade from 1.5 to 1.6
