OpenLGTV BCM: fix FileManager, many improvements to VOD services & FileManager
git-svn-id: http://svn.openlgtv.org.ru@1098 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -7,7 +7,6 @@ TODO:
     * FileManager: add subtitles loading and audio tracks change possibility in played videos (?)
     * FileManager: add check mark to select multiple files/dirs and handle that in copy/move/delete/play (?)
     * FileManager: add command line or command window (?)
-    * FileManager: fix copy status check - looks I've broken it recently
     * make free space check for backup in installer
     * insert characters in cursor position in WebUI, Internet Browser and FileManager dialogs, not always at the end of string
     * update BusyBox to 1.19.4 (or newer) and backport few fixes from master, like "httpd: make byte ranges which start at 0 work too. Closes 4766" and "httpd: fix sendfile of files larger than 2 Gb. Closes 4754"
@@ -49,6 +48,7 @@ TODO:
     * FIX: M3U parser now supports both local (absolute and related) paths and network links
     * FIX: WebUI -> 'Network Shares' -> 'Add Share' doesn't fill fields with previous item
     * FIX: NetPlayer alternative better start page and improved parser (performance, visibility and compatibility)
+    * FIX: better handling Channel(Page) Up/Down and arrows in VOD services
     * ADD: FileManager: image zooming/resizing using 'OK' button (or Enter on PC)
     * ADD: FileManager: button to view last status of copy/move action after action was detached to background
     * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
