--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -7,7 +7,6 @@ TODO:
     * FileManager: add subtitles loading and audio tracks change possibility in played videos (?)
     * FileManager: add check mark to select multiple files/dirs and handle that in copy/move/delete/play (?)
     * FileManager: add command line or command window (?)
-    * make free space check for backup in installer
     * insert characters in cursor position in WebUI, Internet Browser and FileManager dialogs, not always at the end of string
     * update BusyBox to 1.19.4 (or newer) and backport few fixes from master, like "httpd: make byte ranges which start at 0 work too. Closes 4766" and "httpd: fix sendfile of files larger than 2 Gb. Closes 4754"
     * udpxy integration for udp:// and rtp:// links
@@ -15,8 +14,7 @@ TODO:
     * update and test scripts chrooted on SmartTV models
     * enable YWE in North American models outside of USA (Canada, Mexico)
     * find a way for OPENRELEASE configs upgrade when currently used ones were already customized
-    * add some more NetCast services
-    * more improvements to RSS parser
+    * add some more steaming media services(?)
     * add support for Debian running from USB storage
     * compile gpgme, add public key, prepare some useful (signed) packages (any propositions?) in repository and disable OpenWRT repository by default
     * storage for Yahoo Widgets in some NAND flash partitions? some backup partitions?
@@ -85,6 +83,7 @@ TODO:
     * ADD: OPENRELEASE crash detection - it will get disabled on next boot (after upgrade or enabling it) if unclean shutdown will be detected
     * ADD: 'YouTube in TV' (Leanback v3) interface - with playlists support and HD playback
     * ADD: web tools: jpeg.sh (support for unsuported by web browser non-JFIF JPEGs) and msdl.sh (support for additional streamed media protocols) - both need extroot
+    * ADD: free space for backup check in installer
     * UPDATE: OPENRELEASE upgrade to version 2.1.2-16-g5414057
     * UPDATE: ntfs-3g upgrade to version 2012.1.15
     * UPDATE: tmux upgrade from 1.5 to 1.6
