OpenLGTV BCM: web proxy fixes - all web pages should work now, including SSL/TLS connections with 'CONNECT' method
git-svn-id: http://svn.openlgtv.org.ru@1103 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -64,6 +64,7 @@ TODO (not everything to be done for 0.5.0):
     * FIX: WebUI -> 'Network Shares' -> 'Add Share' doesn't fill fields with previous item
     * FIX: NetPlayer alternative better start page and improved parser (performance, visibility and compatibility)
     * FIX: better handling Channel(Page) Up/Down and arrows in VOD services
+    * FIX: fixes in web proxy that should load any web pages now (including tunnelled connecttions via SSL/TLS (https://))
     * ADD: FileManager: image zooming/resizing using 'OK' button (or Enter on PC)
     * ADD: FileManager: button to view last status of copy/move action after action was detached to background
     * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
