OpenLGTV BCM: add simple 4x2 network services menu example for customization
git-svn-id: http://svn.openlgtv.org.ru@1104 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -102,6 +102,7 @@ TODO (not everything to be done for 0.5.0):
     * ADD: 'YouTube in TV' (Leanback v3) interface - with channels, playlists, friends, voting, etc support and HD playback
     * ADD: web tools: jpeg.sh (support for unsuported by web browser non-JFIF JPEGs) and msdl.sh (support for additional streamed media protocols) - both need extroot
     * ADD: free space for backup check in installer
+    * ADD: simple network services menu example for customization
     * UPDATE: OPENRELEASE upgrade to version 2.1.2-16-g5414057
     * UPDATE: ntfs-3g upgrade to version 2012.1.15
     * UPDATE: tmux upgrade from 1.5 to 1.6
