--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -65,6 +65,7 @@ TODO (not everything to be done for 0.5.0):
     * FIX: NetPlayer alternative better start page and improved parser (performance, visibility and compatibility)
     * FIX: better handling Channel(Page) Up/Down and arrows in VOD services
     * FIX: fixes in web proxy that should load any web pages now (including tunnelled connecttions via SSL/TLS (https://))
+    * FIX: ability to break boot process on serial connection with CTRL+C
     * ADD: FileManager: image zooming/resizing using 'OK' button (or Enter on PC)
     * ADD: FileManager: button to view last status of copy/move action after action was detached to background
     * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
@@ -125,6 +126,7 @@ TODO (not everything to be done for 0.5.0):
     * CHANGE: modules.custom file name has changed to modules.list now
     * CHANGE: NetPlayer alternative is now renamed to RSS parser with support for more RSS-like formats
     * CHANGE: use ntpclient instead of ntpd again with timeset.sh script to attempt to adjust time forever, until fist successful set
+    * CHANGE: make nanddump backup (with OOB data) for 'total' partition by default
     * REMOVE: mtdinfo.sh for space reason - it's code is in info.sh already
     * REMOVE: chrt and chat binaries from SmartTV image for space reason - use BusyBox applets instead
     * REMOVE: libmagic.so as it wasn't used now since 'file' was removed
