OpenLGTV BCM: FlashBlock like parser to filter most Flash content from websites
git-svn-id: http://svn.openlgtv.org.ru@1107 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -34,6 +34,7 @@ TODO (not everything to be done for 0.5.0):
     * add some more steaming media services(?)
     * add support for Debian running from USB storage
     * compile gpgme, add public key, prepare some useful (signed) packages (any propositions?) in repository and disable OpenWRT repository by default
+    * package repository outside of SVN tree
     * storage for Yahoo Widgets in some NAND flash partitions? some backup partitions?
     * bring back real e2fsck?
     * upgrade uClibc?
@@ -104,6 +105,7 @@ TODO (not everything to be done for 0.5.0):
     * ADD: web tools: jpeg.sh (support for unsuported by web browser non-JFIF JPEGs) and msdl.sh (support for additional streamed media protocols) - both need extroot
     * ADD: free space for backup check in installer
     * ADD: simple network services menu example for customization
+    * ADD: switchable flashblock type parser in proxy to filter most flash content in proxied Internet Browser
     * UPDATE: OPENRELEASE upgrade to version 2.1.2-16-g5414057
     * UPDATE: ntfs-3g upgrade to version 2012.1.15
     * UPDATE: tmux upgrade from 1.5 to 1.6
