OpenLGTV BCM: add more NetCast services
git-svn-id: http://svn.openlgtv.org.ru@1109 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
@@ -116,7 +116,7 @@ document.defaultAction = true;
 <center>
 <table border=0>
 <tr>
-	<td align="center"><a id="c1" onKeyPress="javascript:setCurrent(this);return false" href='http://youtube.com/leanbacklite' target='_parent'><img src="Images/tmp/youtube.png" border=3></a></td>
+	<td align="center"><a id="c1" onKeyPress="javascript:setCurrent(this);return false" href='http://www.youtube.com/leanbacklite' target='_parent'><img src="Images/tmp/youtube.png" border=3></a></td>
 	<script type="text/javascript">OnLoadSetCurrent();</script>
 	<td align="center"><a id="c2" onKeyPress="javascript:setCurrent(this);return false" href='../vod/ipla.cgi' target='_parent'><img src="Images/tmp/iplapl.png" border=3></a></td>
 	<td align="center"><a id="c3" onKeyPress="javascript:setCurrent(this);return false" href='../vod/tvp.cgi' target='_parent'><img src="Images/tmp/tvppl.png" width="200" border=3></a></td>
@@ -395,6 +395,20 @@ document.defaultAction = true;
 	<td align="center"><a id="c207" onKeyPress="javascript:setCurrent(this);return false" href='http://www.majorcineplex.com/lgsmarttv/templates/' target='_parent'><img src="Images/tmp/majorcineplex.png" border=3></a></td>
 	<td align="center"><a id="c208" onKeyPress="javascript:setCurrent(this);return false" href='http://api.video.sina.com.cn/lg/' target='_parent'><img src="Images/tmp/Sina.gif" border=3></a></td>
 	<td align="center"><a id="c209" onKeyPress="javascript:setCurrent(this);return false" href='http://tvlg.globo.com/' target='_parent'><img src="Images/tmp/globocom.gif" border=3></a></td>
+	<td align="center"><a id="c210" onKeyPress="javascript:setCurrent(this);return false" href='http://getnextv.tv/tvguide.LG-ST' target='_parent'><img src="Images/tmp/getnextv.png" border=3></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c211" onKeyPress="javascript:setCurrent(this);return false" href='http://lg.amebatv.com/app/live/amebaLG.html' target='_parent'><img src="Images/tmp/amebatv.png" border=3></a></td>
+	<td align="center"><a id="c212" onKeyPress="javascript:setCurrent(this);return false" href='http://lge-app.nfb.ca/' target='_parent'><img src="Images/tmp/nfb.png" border=3></a></td>
+	<td align="center"><a id="c213" onKeyPress="javascript:setCurrent(this);return false" href='http://lg.tvn-2.com/lg/pages/homelist.html' target='_parent'><img src="Images/tmp/tvn2.png" border=3></a></td>
+	<td align="center"><a id="c214" onKeyPress="javascript:setCurrent(this);return false" href='http://prod.ap.lg.accedo.tv/' target='_parent'><img src="Images/tmp/ap.png" border=3></a></td>
+	<td align="center"><a id="c215" onKeyPress="javascript:setCurrent(this);return false" href='http://tv.bibc.com/lg/cn_id/cn_id.xhtml' target='_parent'><img src="Images/tmp/bibc_cn_id.png" border=3></a></td>
+	<td align="center"><a id="c216" onKeyPress="javascript:setCurrent(this);return false" href='http://tv.bibc.com/lg/cnn_as/cnn_as.xhtml' target='_parent'><img src="Images/tmp/bibc_cnn_as.png" border=3></a></td>
+</tr>
+<tr>
+	<td align="center"><a id="c217" onKeyPress="javascript:setCurrent(this);return false" href='http://www.3deecentral.com/' target='_parent'><img src="Images/tmp/3deecentral.png" border=3></a></td>
+	<td align="center"><a id="c218" onKeyPress="javascript:setCurrent(this);return false" href='http://www.thekaraokechannel.com/tv' target='_parent'><img src="Images/tmp/thekaraokechannel.png" border=3></a></td>
+	<td align="center"><a id="c219" onKeyPress="javascript:setCurrent(this);return false" href='http://www.viewster.tv/viewster_v2/lge.html' target='_parent'><img src="Images/tmp/viewster_v2.png" border=3></a></td>
 </tr>
 </table>
 </center>
